--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     container_name: 'mediamtx'
     image: bluenviron/mediamtx:latest
     network_mode: host
-    volumes:
-      - $PWD/configs.yml:/mediamtx.yml
+    environment:
+      - MTX_WEBRTCADDITIONALHOSTS=103.165.142.44
+      - MTX_API=yes
     deploy:
       resources:
         limits:
