--- a/configs.json
+++ b/configs.json
@@ -26,8 +26,8 @@
     "port": 1883,
     "enabled": true,
     "name": "mqtt_store",
-    "username": "",
-    "password": "",
+    "username": "application",
+    "password": "123456Aa@!",
     "level": "debug"
   },
   "database": {
