--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   backend:
     image: 'nguyentrantrung/backend:latest'
@@ -6,16 +5,17 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2'
+          cpus: '6'
           memory: 2048m
     ports:
-      - 8080:8080
-      - 8081:8081
-      - 8083:8083
-    environment:
-      - CONFIG_FILE_PATH=./configs.json
-    volumes:
-      - ./db:/db
-      - ./configs.json:/configs.json
-    restart: on-failure
+      - 9000:9000
+      - 9001:9001
+    restart: always
     pull_policy: always
+    volumes:
+      - ./configs.json:/configs/configs.json:ro
+    networks:
+      - server
+networks:
+  server:
+    external: true
