--- a/configs.json
+++ b/configs.json
@@ -37,7 +37,7 @@
     }
   },
   "database": {
-    "connection": "user=postgres password=EIxK7UPwkj3Dkp5e dbname=backend host=db.postgres.ntranlab.com port=5432 sslmode=require"
+    "connection": "user=postgres password=EIxK7UPwkj3Dkp5e dbname=prod_backend host=db.postgres.ntranlab.com port=5432 sslmode=require"
   },
   "mediaEngine": {
     "host": "api.mediamtx.ntranlab.com",
