--- a/configs.json
+++ b/configs.json
@@ -49,5 +49,13 @@
       "webRtc": 8889
     },
     "api": 9997
+  },
+  "s3": {
+    "secretKey": "K6tEssiyqquMLAeoyvIERBVps+7wbnucvlpxAsqB",
+    "accessKeyId": "00e08f03367b32165016",
+    "path_prefix": "dev",
+    "region": "hcm",
+    "endpoint": "s3-hcm.sds.vnpaycloud.vn",
+    "bucket": "nguyentt1-files"
   }
 }
