--- a/prod.configs.json
+++ b/prod.configs.json
@@ -51,11 +51,11 @@
     "api": 9997
   },
   "s3": {
-    "secret": "K6tEssiyqquMLAeoyvIERBVps+7wbnucvlpxAsqB",
-    "accessKeyId": "00e08f03367b32165016",
+    "secret": "l4bo/1hTIeE/q2YOJSrEU4TPo/B9NM0gWbLtjOjm",
+    "accessKeyId": "0a0a63fb57d037052f3c",
     "pathPrefix": "prod",
     "region": "hcm",
-    "endpoint": "https://s3-hcm.sds.vnpaycloud.vn",
+    "endpoint": "https://s3-hcm.sds.vnpaycloud.vn:443",
     "bucket": "nguyentt1-files"
   }
 }
