--- a/portal/package.json
+++ b/portal/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@types/jest": "^29.5.12",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "babel-jest": "^29.7.0",
     "babel-preset-jest": "^29.6.3",
@@ -35,10 +36,12 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.2.0",
+    "postcss": "^8.4.38",
     "regenerator-runtime": "0.14.1",
     "solid-devtools": "^0.29.2",
     "solid-jest": "^0.2.0",
     "solid-testing-library": "^0.5.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.9",
     "vite-plugin-solid": "^2.10.2"
