--- a/portal/package.json
+++ b/portal/package.json
@@ -27,6 +27,7 @@
     "@solidjs/testing-library": "^0.8.5",
     "@testing-library/jest-dom": "^6.2.0",
     "@types/jest": "^29.5.12",
+    "@types/prismjs": "^1.26.3",
     "@types/testing-library__jest-dom": "^5.14.9",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
@@ -38,6 +39,7 @@
     "jsdom": "^23.2.0",
     "postcss": "^8.4.38",
     "regenerator-runtime": "0.14.1",
+    "sass": "^1.75.0",
     "solid-devtools": "^0.29.2",
     "solid-jest": "^0.2.0",
     "solid-testing-library": "^0.5.1",
@@ -47,10 +49,13 @@
     "vite-plugin-solid": "^2.10.2"
   },
   "dependencies": {
+    "@solid-primitives/debounce": "^1.3.0",
     "@solidjs/router": "^0.13.2",
+    "@srsholmes/solid-code-input": "^0.0.18",
     "@suid/icons-material": "^0.7.0",
     "@suid/material": "^0.16.0",
     "@suid/vite-plugin": "^0.2.0",
+    "prismjs": "^1.29.0",
     "solid-js": "^1.8.11"
   }
 }
