--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - 9000:9000
       - 9001:9001
     restart: always
+    environment:
+      GIN_MODE: release
     # pull_policy: always
     volumes:
       - ./configs.json:/configs/configs.json:ro
