--- a/portal/package.json
+++ b/portal/package.json
@@ -51,10 +51,10 @@
   "dependencies": {
     "@solid-primitives/debounce": "^1.3.0",
     "@solidjs/router": "^0.13.2",
-    "@srsholmes/solid-code-input": "^0.0.18",
     "@suid/icons-material": "^0.7.0",
     "@suid/material": "^0.16.0",
     "@suid/vite-plugin": "^0.2.0",
+    "dayjs": "^1.11.10",
     "prismjs": "^1.29.0",
     "solid-js": "^1.8.11"
   }
